--- a/src/app/components/calculator/Calculator.module.scss
+++ b/src/app/components/calculator/Calculator.module.scss
@@ -11,11 +11,12 @@
     position: relative;
     flex-direction: column;
     width: 90vw;
+    max-width: 1200px;
     height: auto;
     background-color: #F8F6F2;
     border: solid 8px #987D56;
     border-radius: 6px;
-    margin-top: 32vh;
+    margin: 32vh auto 0 auto;
     padding: 20px;
     z-index: 2;
     color: #5D7560;
