--- a/src/app/components/footer/Footer.module.scss
+++ b/src/app/components/footer/Footer.module.scss
@@ -19,5 +19,5 @@
     justify-content: center;
     margin-top: 40px;
     margin-bottom: 20px;
-    color: #999;
+    color: var(--color-text-muted);
 }
