update ui and add screenshots for calc and assessment to readme

--- a/src/app/components/calculator/Calculator.module.scss
+++ b/src/app/components/calculator/Calculator.module.scss
@@ -13,8 +13,8 @@
     width: 95vw;
     height: auto;
     background-color: var(--color-surface);
-    border: solid 1px var(--color-border-subtle);
-    border-radius: 6px;
+    border: solid 10px var(--color-gold);
+    border-radius: 18px;
     margin: 25vh auto 0 auto;
     padding: 18px 20px 24px 20px;
     z-index: 2;
